--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Weather App</title>
 </head>
+<style></style>
 <body>
     <div class="card">
         <div class="search">
