--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="index.css">
     <title>Weather App</title>
 </head>
-<style></style>
+<style>
+body{
+}
+</style>
 <body>
     <div class="card">
         <div class="search">
